<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Kalkulator">

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/plus"
        android:text="@string/plus"
        android:layout_below="@+id/angkaKedua"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="18dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/angkaPertama"
        android:hint="@string/angkapertama"
        android:textSize="14sp"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="20dp"
        android:autofillHints="" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="10"
        android:id="@+id/angkaKedua"
        android:hint="@string/angkakedua"
        android:textSize="14sp"
        android:layout_below="@+id/angkaPertama"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:autofillHints="" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/subtitle"
        android:id="@+id/textView5"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:gravity="center_horizontal" />

    <TextView
        android:id="@+id/hasil"
        android:text="@string/_0"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="2dp"
        android:textAlignment="center"
        android:textSize="36sp"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hasil"
        android:id="@+id/textView1"
        android:textAlignment="center"
        android:textStyle="normal|bold"
        android:textSize="24sp"
        android:layout_marginTop="35dp"
        android:layout_below="@+id/clear"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:gravity="center_horizontal" />

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/minus"
        android:text="@string/minus"
        android:layout_alignBaseline="@+id/plus"
        android:layout_alignBottom="@+id/plus"
        android:layout_toRightOf="@+id/plus"
        android:layout_toEndOf="@+id/plus"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/clear"
        android:id="@+id/clear"
        android:layout_below="@+id/plus"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:id="@+id/bagi"
        android:text="@string/bagi"
        android:layout_above="@+id/clear"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/kali"
        android:text="@string/kali"
        android:layout_alignBaseline="@+id/bagi"
        android:layout_alignBottom="@+id/bagi"
        android:layout_toLeftOf="@+id/bagi"
        android:layout_toStartOf="@+id/bagi"/>
</RelativeLayout>